# kachaka-sdk-toolkit

./: .gitignore  .mcp.json  ARCHITECTURE.md  README.md  pyproject.toml  pytest.ini  setup.cfg
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
kachaka_core/: camera.py  commands.py  connection.py  controller.py  error_codes.py  error_handling.py  interceptors.py  playground.py  queries.py
mcp_server/: server.py
skills/kachaka-sdk/: SKILL.md
skills/kachaka-sdk/examples/: playground_offline_route.py
tests/: conftest.py  test_camera.py  test_commands.py  test_connection.py  test_controller.py  test_interceptors.py  test_playground.py  test_queries.py  test_server_controller.py
tests/hil/: conftest.py  test_disconnect.py
