[metadata]
name = kachaka-sdk-toolkit
version = 0.0.0

[options]
packages = find:
python_requires = >=3.10,<3.13
install_requires =
    kachaka-api>=3.10
    grpcio>=1.66
    mcp[cli]>=1.0
    Pillow>=10.0

[options.packages.find]
include =
    kachaka_core*
    mcp_server*
    kachaka_sdk_toolkit*
